Change the "name" assigned to the game controller in the VRPN config to "Tracker"
The game controller seems to be served under the same "name" as the headset - just with different IDs.

--- a/ParaViewVR/vrpn.cfg
+++ b/ParaViewVR/vrpn.cfg
@@ -1,6 +1,6 @@
 # Search below for more DTrack settings.
 vrpn_Tracker_DTrack Tracker  5000 0.5 2 0 0 1 3d  -
-vrpn_DirectXRumblePad		RumblePad0
+vrpn_DirectXRumblePad		Tracker
 
 ################################################################################
 ################################################################################
